--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,6 +7,15 @@
             <h1><a href="">Selbstgebastelter Blog</a></h1>
         </div>
 
+{% for post in posts %}
+        <div>
+        	<p>published: {{ post.published_date }}</p>
+        	<h1><a href="">{{ post.title }}</a></h1>
+        	<p>{{ post.text|linebreaksbr }}</p>
+        	{{ posts }}
+        </div>
+ {% endfor %}
+
 		<p>Hi there!</p>
 		<p>Oh ehm effing gee! It works!</p>
 	</body>
