Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<title>bananarama</title>
 	</head>
 	<body>
@@ -18,5 +20,6 @@
 
 		<p>Hi there!</p>
 		<p>Oh ehm effing gee! It works!</p>
+		<p>Let's try it again.</p>
 	</body>
 </html>
