--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,7 +1,7 @@
 h1 a {
     color: #00cc99;
     font-size: 80px;
-    font-family: 'Lobster';
+    font-family: 'Courier New';
 }
 body {
     padding-left: 80px;
