--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,18 +8,23 @@
 		<link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
 	</head>
+
+<div class="page-header">
+    <h1><a href="/">ilanabanana</a></h1>
+</div>
+
 	<body>
 		<div>
             <h1><a href="">Selbstgebastelter Blog</a></h1>
         </div>
 
 {% for post in posts %}
-        <div>
-        	<p>published: {{ post.published_date }}</p>
-        	<h1><a href="">{{ post.title }}</a></h1>
-        	<p>{{ post.text|linebreaksbr }}</p>
-        	{{ posts }}
-        </div>
+     <div class="post">
+    	<p>published: {{ post.published_date }}</p>
+    	<h1><a href="">{{ post.title }}</a></h1>
+   		<p>{{ post.text|linebreaksbr }}</p>
+	</div>
+
  {% endfor %}
 
 		<p>Hi there!</p>
