Modified templates to display posts from database.

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -12,7 +12,7 @@ body {
 }
 
 .page-header {
-    background-color: #ff9400;
+    background-color: #b3b3ff;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
