--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -8,13 +8,14 @@ body {
 	padding-left: 80px;
 	color: #336699;
 	font-size: 25px;
-	font-family: 'Courier New'
+	font-family: 'Courier New';
 }
 
 .page-header {
     background-color: #b3b3ff;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
+    padding-left: 0px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
