--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -14,8 +14,8 @@ body {
 .page-header {
     background-color: #b3b3ff;
     margin-top: 0;
+    margin-left: 0;
     padding: 20px 20px 20px 40px;
-    padding-left: 0px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
